# improvCPP

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json
include/improvenginelib/: AnimalGenerator.h  Displayer.h  IContent.h  IContentDisplayer.h  IImprovEngineGenerator.h  ITextualResourcesFileParser.h  ImpulsionGenerator.h  RandomVectorSampler.h  TextContent.h  TextDisplayer.h  TextualResourcesFileParser.h  UIController.h
include/improvenginelib/engines/: AnimalGenerator.h  BodyPartGenerator.h  WordImpactGenerator.h
resources/: resources.json
src/: CMakeLists.txt  main  main.cpp
src/improvenginelib/: AnimalGenerator.cpp  BodyPartGenerator.cpp  Displayer.cpp  ImpulsionGenerator.cpp  RandomVectorSampler.inl  TextDisplayer.cpp  TextualResourcesFileParser.cpp  UIController.cpp
src/improvenginelib/engines/: AnimalGenerator.cpp  BodyPartGenerator.cpp  WordImpactGenerator.cpp
